--- a/lib/core/src/server/templates/base-preview-head.html
+++ b/lib/core/src/server/templates/base-preview-head.html
@@ -125,7 +125,7 @@
         source: source,
         line: line,
         column: column,
-        error: { message: err.message, name: err.name, stack: err.stack },
+        error: err && { message: err.message, name: err.name, stack: err.stack },
         origin: 'preview',
         /* eslint-enable object-shorthand */
       })
